style: fix spacing between cards on the index page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -373,7 +373,7 @@ body {
 }
 
 .cards {
-  width: 80%;
+  width: 90%;
   height: 45vh;
   background-color: var(--contact);
   border-radius: 3vh;
@@ -755,12 +755,13 @@ button {
     justify-content: center;
     align-items: center;
     gap: 10vh;
+    /* margin-top: 5rem; */
   }
 
   .cards {
     border-radius: 0;
     width: 100%;
-    height: 60vh;
+    height: 110vh;
     flex-direction: column;
     padding: 10px;
     gap: 1vh;
